adding select by name & fixing login

--- a/new/templates/selectbyname.html
+++ b/new/templates/selectbyname.html
@@ -17,6 +17,7 @@
 
 </form>
  <table width="100%" border="1">
+       {%for intake in  intakes%}
 
              <tr>
                 <td>{{intake.id}}</td>
@@ -29,6 +30,7 @@
              </tr>
 
 
+    {%endfor%}
 
 
        </table>
