--- a/new/templates/login.html
+++ b/new/templates/login.html
@@ -13,8 +13,8 @@
     {%csrf_token%}
 
   <div class="form-group">
-    <label >Email address</label>
-    <input type="email" class="form-control"  placeholder="Enter email" name="email">
+    <label >username</label>
+    <input type="username" class="form-control"   name="username">
   </div>
   <div class="form-group">
     <label >Password</label>
