--- a/new/templates/signup.html
+++ b/new/templates/signup.html
@@ -26,9 +26,11 @@
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
   </div>
 
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
+
+      <div class="form-check">
+    <input type="checkbox" class="form-check-input" name="check">
+    <label class="form-check-label" >if superuser </label>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
