--- a/new/templates/homenav.html
+++ b/new/templates/homenav.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 </nav>
- <h1>{{request.session.username}}</h1>
+ <h1>Welcome {{request.session.username}}</h1>
   {% block check %}
 
     {% endblock %}
