--- a/new/templates/delete.html
+++ b/new/templates/delete.html
@@ -10,7 +10,7 @@
 <form method="post">
     {%csrf_token%}
      <div class="form-group">
-    <label >username</label>
+    <label >enter ID that you want to delete</label>
     <input type="id" class="form-control"  placeholder="Enter username" name="id">
   </div>
       <button type="submit" class="btn btn-primary">Submit</button>
