--- a/new/templates/delete.html
+++ b/new/templates/delete.html
@@ -11,7 +11,7 @@
     {%csrf_token%}
      <div class="form-group">
     <label >enter ID that you want to delete</label>
-    <input type="id" class="form-control"  placeholder="Enter username" name="id">
+    <input type="id" class="form-control"  placeholder="Enter ID" name="id">
   </div>
       <button type="submit" class="btn btn-primary">Submit</button>
 
